--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 <ol>
-<li><a href="/1-Simplay square/">1-Simplay square</a></li>
-<li><a href="/2-Carrom/">2-Carrom</a></li>
-<li><a href="/3-Push Button/">3-Push Button</a></li>
-<li><a href="/4-Ups n Downs/">4-Ups n Downs</a></li>
-<li><a href="/5-Acid Rain/">5-Acid Rain</a></li>
-<li><a href="/6-Missing Slice/">6-Missing slice</a></li>
-<li><a href="/7-Leafy Trail/">7-Leafy Trail</a></li>
-<li><a href="/8-Forking Crazy/">8-Forking Crazy</a></li>
-<li><a href="/9-Tesseract/">9-Tesseract</a></li>
-<li><a href="/10-Cloaked Spirits/">10-Cloaked Spirits</a></li>
+<li><a href="./1-Simplay square/">1-Simplay square</a></li>
+<li><a href="./2-Carrom/">2-Carrom</a></li>
+<li><a href="./3-Push Button/">3-Push Button</a></li>
+<li><a href="./4-Ups n Downs/">4-Ups n Downs</a></li>
+<li><a href="./5-Acid Rain/">5-Acid Rain</a></li>
+<li><a href="./6-Missing Slice/">6-Missing slice</a></li>
+<li><a href="./7-Leafy Trail/">7-Leafy Trail</a></li>
+<li><a href="./8-Forking Crazy/">8-Forking Crazy</a></li>
+<li><a href="./9-Tesseract/">9-Tesseract</a></li>
+<li><a href="./10-Cloaked Spirits/">10-Cloaked Spirits</a></li>
 </ol>
